# mc-prefect-loaders

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  database_client.py  kraken_trade_book_deploy.py  kraken_trade_book_flows.py  models.py  pyproject.toml  pytest.ini
.github/workflows/: build-and-test.yml  deploy.yml  docker-image.yml
charts/deploy-prefect/: Chart.yaml  README.md  values.yaml
charts/deploy-prefect/templates/: _helpers.tpl  deploy-prefect-job.yaml
data/: secrets_base.py  variables_base.py
notebooks/: check-spread-over-time.ipynb  pull-news-data.ipynb
secrets/: secrets.py
src/: kraken_trade_book_deploy.py  kraken_trade_book_flows.py  models.py
src/attributes/: abstract.py  asset_group_attributes.py  pairs_trading.py  provider_asset_attribute_deploy.py  provider_asset_attribute_flows.py  stochastic_models.py
src/content/: coin_desk_content_deploy.py  coin_desk_content_flows.py
src/content/sentiment/: abstract.py  content_sentiment_deploy.py  content_sentiment_flows.py  sentiment_types.py
src/market/: abstract.py  market_data.py  provider_asset_market_deploy.py  provider_asset_market_flows.py
src/order/: database_client.py  kraken_trade_book_deploy.py  kraken_trade_book_flows.py
src/shared/: utils.py
src/utils/: tasks.py
tests/: conftest.py  mock_database.py  test_coin_desk_content.py  test_coindesk_content.py  test_kraken_orders.py  test_market_data.py  test_provider_asset_attribute.py  test_sentiment.py  test_stochastic_models.py  test_utils.py  utils.py
tests/data/coindesk/: all_articles.json  all_sources.json
tests/data/kraken/: all_orders.json
tests/integration/: conftest.py  test_batching.py  test_coindesk_content.py  test_kraken_orders.py  test_market_data.py  test_pairs_trading.py  test_provider_asset_attribute.py  test_sentiment.py
tests/unit/: test_gbm_behavior.py  test_market_data_utility.py  test_ou_behavior.py  test_statistical_pairs_trading.py  test_stochastic_models.py  test_time_alignment.py  test_utils.py
