[project]
name = "mc-prefect-loaders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "prefect[dask,github]>=3.4.5",
    "prefect-docker>=0.6.6",
    "pyarrow>=20.0.0",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "mc-postgres-db==1.2.1",
    "polars>=1.33.1",
    "statsmodels>=0.14.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "pandas-profiling>=3.2.0",
    "ruff>=0.11.13",
    "tqdm>=4.67.1",
    "widgetsnbextension>=4.0.14",
]
test = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]

[tool.ruff.lint]
select = ["I", "F401"]  # Enable import sorting and unused imports

[tool.ruff.lint.isort]
# Sort imports by line length (shortest first)
length-sort = true
length-sort-straight = true

[tool.ruff]
# Enable automatic fixing of issues
fix = true
